@@ -1,1 +1,195 @@
 # JVM
+
+5. JVM
+Q13: JVM 内存结构？
+
+答案: 包括程序计数器、虚拟机栈、本地方法栈、堆、方法区（JDK 8 后为元空间）。堆存储对象，方法区存储类信息、常量池。
+扩展: 元空间和永久代的区别？（元空间使用本地内存，动态扩展）
+Q14: 垃圾回收机制？
+
+答案: GC 回收堆中无引用对象，常用算法有标记-清除、标记-整理、复制算法。常见收集器：CMS、G1（分代收集，关注低延迟）。
+扩展: GC 调优参数？（-Xms、-Xmx、-XX:+UseG1GC）
+Q15: 类加载过程？
+
+答案: 加载 → 连接（验证、准备、解析） → 初始化。双亲委派模型确保类加载安全。
+扩展: 如何打破双亲委派？（自定义 ClassLoader，重写 loadClass）
+
+
+JVM 调优是 Java Web 后台开发中提升系统性能、解决内存问题的重要手段，特别是在高并发场景下。以下是对 JVM 调优常见操作的详细讲解，涵盖核心概念、调优目标、常见参数、工具和实践，内容精炼且针对面试高频点。如果你需要具体代码示例、某个参数的深入分析或项目案例，请告诉我！
+
+---
+
+### 一、JVM 调优的目标
+JVM 调优的主要目标是优化性能、降低延迟、提高吞吐量，具体包括：
+1. **减少 Full GC 频率和耗时**：避免频繁或长时间的 GC 导致系统停顿。
+2. **优化内存分配**：合理分配堆内存，避免内存溢出（OOM）或浪费。
+3. **提高吞吐量**：提升系统处理请求的能力（如 TPS/QPS）。
+4. **降低延迟**：减少响应时间，优化用户体验。
+5. **解决特定问题**：如内存泄漏、线程阻塞、CPU 过高。
+
+---
+
+### 二、JVM 内存结构回顾
+JVM 调优主要针对堆和非堆内存：
+- **堆内存**：存储对象实例，分为新生代（Eden、Survivor）和老年代。
+- **非堆内存**：
+  - 方法区（JDK 8 后为元空间）：存储类信息、常量池。
+  - 栈：线程栈、程序计数器。
+  - 直接内存：NIO 使用，需单独调优。
+- **垃圾回收器**：如 CMS、G1，调优时需根据收集器特性调整。
+
+---
+
+### 三、JVM 调优的常见操作
+#### 1. 调整堆内存大小
+- **参数**：
+  - `-Xms`：初始堆大小，建议与 `-Xmx` 设置相同，避免动态调整。
+  - `-Xmx`：最大堆大小，建议为物理内存的 1/4 至 1/2。
+  - `-XX:NewRatio`：老年代与新生代的比例（如 2 表示老年代是新生代的 2 倍）。
+  - `-XX:SurvivorRatio`：Eden 与 Survivor 区比例（如 8 表示 Eden 是 Survivor 的 8 倍）。
+- **操作**：
+  - 根据业务规模设置堆大小，如高并发系统设 `-Xms4g -Xmx4g`。
+  - 调整新生代比例，减少 Minor GC 频率，例：`-XX:NewRatio=2`。
+- **示例**：
+  ```bash
+  java -Xms4g -Xmx4g -XX:NewRatio=2 -jar app.jar
+  ```
+
+#### 2. 选择合适的垃圾收集器
+- **常见收集器**：
+  - **CMS（Concurrent Mark Sweep）**：低停顿，适合低延迟场景，但碎片较多。
+  - **G1（Garbage First）**：兼顾吞吐量和低延迟，适合大堆（>4GB），JDK 9+ 默认。
+  - **ZGC/Shenandoah**：超低延迟，适合超大堆（JDK 11+）。
+- **操作**：
+  - 高吞吐量场景：使用 `-XX:+UseParallelGC`（并行收集器）。
+  - 低延迟场景：使用 `-XX:+UseG1GC` 或 `-XX:+UseZGC`。
+  - CMS 优化：调整 `-XX:CMSInitiatingOccupancyFraction`（如 70）控制老年代回收触发。
+- **示例**：
+  ```bash
+  java -XX:+UseG1GC -Xmx8g -jar app.jar
+  ```
+
+#### 3. 优化 GC 频率和耗时
+- **参数**：
+  - `-XX:MaxGCPauseMillis`：设置 G1 的最大停顿时间（如 200ms）。
+  - `-XX:GCTimeRatio`：GC 时间占比，影响吞吐量（如 19 表示 GC 占 5%）。
+  - `-XX:+UseStringDeduplication`：字符串去重，减少内存占用（JDK 8u20+）。
+- **操作**：
+  - 监控 GC 日志，分析 Minor GC 和 Full GC 频率。
+  - 减少大对象分配，避免直接进入老年代。
+  - 调整 `-XX:MaxTenuringThreshold`（如 15），控制对象晋升老年代的年龄。
+- **示例**：
+  ```bash
+  java -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:MaxTenuringThreshold=15 -jar app.jar
+  ```
+
+#### 4. 处理元空间（Metaspace）
+- **问题**：元空间过小可能导致 `OutOfMemoryError: Metaspace`。
+- **参数**：
+  - `-XX:MetaspaceSize`：初始元空间大小。
+  - `-XX:MaxMetaspaceSize`：最大元空间大小，建议设置上限（如 512m）。
+- **操作**：
+  - 动态加载类较多的系统（如 Spring Boot），设置 `-XX:MaxMetaspaceSize=512m`。
+  - 监控类加载数量，减少不必要的动态代理或反射。
+- **示例**：
+  ```bash
+  java -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -jar app.jar
+  ```
+
+#### 5. 优化直接内存
+- **问题**：NIO 或 Netty 使用直接内存，过大可能导致 OOM。
+- **参数**：
+  - `-XX:MaxDirectMemorySize`：限制直接内存大小（如 1g）。
+- **操作**：
+  - 监控直接内存使用（如 `sun.nio.ch.DirectBuffer`）。
+  - 优化 NIO 代码，及时释放 ByteBuffer。
+- **示例**：
+  ```bash
+  java -XX:MaxDirectMemorySize=1g -jar app.jar
+  ```
+
+#### 6. 分析和监控
+- **工具**：
+  - **jstat**：查看 GC 频率、堆使用情况。
+    ```bash
+    jstat -gcutil <pid> 1000
+    ```
+  - **jmap**：生成堆转储，分析内存占用。
+    ```bash
+    jmap -dump:live,format=b,file=heap.hprof <pid>
+    ```
+  - **jvisualvm/jconsole**：可视化监控 GC、内存、线程。
+  - **Arthas**：在线诊断，查看对象、线程、GC 状态。
+  - **GC 日志**：启用 GC 日志分析。
+    ```bash
+    java -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -jar app.jar
+    ```
+- **操作**：
+  - 定期分析堆转储，查找内存泄漏（如 HashMap 未清理）。
+  - 监控 GC 停顿时间，调整参数优化吞吐量或延迟。
+
+#### 7. 线程和锁优化
+- **问题**：线程过多导致上下文切换，或锁竞争导致性能下降。
+- **操作**：
+  - 调整线程池大小（如 Tomcat 的 `maxThreads` 或 Java 的 `ThreadPoolExecutor`）。
+  - 使用 `-XX:+UseBiasedLocking` 启用偏向锁，减少锁开销。
+  - 监控线程状态，排查死锁（使用 `jstack <pid>`）。
+- **示例**：
+  ```bash
+  java -XX:+UseBiasedLocking -jar app.jar
+  ```
+
+#### 8. 项目特定调优
+- **高并发场景**：
+  - 增大新生代（`-Xmn`），减少 Minor GC。
+  - 使用 G1 收集器，设置 `-XX:MaxGCPauseMillis=100`。
+- **内存敏感场景**：
+  - 减少对象创建，使用对象池（如 Apache Commons Pool）。
+  - 启用字符串去重（`-XX:+UseStringDeduplication`）。
+- **低延迟场景**：
+  - 使用 ZGC（`-XX:+UseZGC`），设置小停顿时间。
+
+---
+
+### 四、调优流程
+1. **收集信息**：
+   - 监控系统指标：GC 频率、停顿时间、内存使用率、CPU 负载。
+   - 使用工具：jstat、jmap、Arthas、VisualVM。
+2. **分析瓶颈**：
+   - 频繁 Full GC：堆太小或内存泄漏。
+   - 高延迟：GC 停顿时间长或锁竞争。
+   - OOM：堆、元空间或直接内存溢出。
+3. **调整参数**：
+   - 根据瓶颈调整堆大小、GC 策略、线程池等。
+   - 小步调整，单次改动一个参数，观察效果。
+4. **验证效果**：
+   - 压测验证 TPS/QPS、响应时间。
+   - 分析 GC 日志，确保优化有效。
+5. **持续监控**：
+   - 部署后持续观察，结合 Prometheus、Grafana 等工具。
+
+---
+
+### 五、面试扩展问题
+1. **如何排查 OOM 问题？**
+   - 启用 GC 日志，分析堆使用。
+   - 使用 jmap 生成堆转储，MAT/Eclipse 分析大对象。
+   - 检查元空间、直接内存使用。
+2. **G1 和 CMS 的区别？**
+   - CMS：低停顿，分代收集，碎片多。
+   - G1：分区收集，适合大堆，自动调优。
+3. **项目中如何进行 JVM 调优？**
+   - 例：电商系统，频繁 Full GC，分析发现大对象过多，调整 `-Xmn` 增大新生代，使用 G1 收集器，减少停顿时间。
+4. **如何减少 GC 开销？**
+   - 优化代码：减少临时对象、避免大对象。
+   - 调整堆结构：增大新生代、优化 Survivor 比例。
+
+---
+
+### 六、总结
+- **核心操作**：调整堆大小、选择垃圾收集器、优化 GC 频率、监控元空间和直接内存、使用工具分析。
+- **常用参数**：`-Xms`、`-Xmx`、`-XX:+UseG1GC`、`-XX:MaxGCPauseMillis`、`-XX:MaxMetaspaceSize`。
+- **工具**：jstat、jmap、VisualVM、Arthas、GC 日志。
+- **实践建议**：结合业务场景（如高并发、内存敏感），从小规模调整开始，压测验证，持续监控。
+
+如果你需要具体参数配置示例、GC 日志分析步骤、或某场景的调优案例（如 Redis + Spring Boot），请告诉我！
